# mcp-jichitai-basic-info

./: .gitignore  .mcp.json  LICENSE  MCP_FINANCIAL_DATA_ISSUE_REPORT.md  README.md  mcp_server_spec.md  mcp_server_spec_phase2.md  pyproject.toml
.cursor/: mcp.json
src/: __init__.py  server.py
src/data/: __init__.py  age_group_parser.py  codes_parser.py  data_manager.py  dx_parser.py  finance_parser.py  mynumber_parser.py  population_parser.py
src/tools/: __init__.py
tests/: test_csv_export.py  test_csv_export_small.py  test_finance_schema.py  test_new_finance_data.py  test_phase2.py
